        Fix #4020 XML with entity and xml schema produces error and breaks jEdit UI (Eric Le Lay)
        PFR #378 Checkbox to disable DTD validation on global basis (Eric Le Lay)
        Fix #1869 XML Plugin missing values in indexterm class attribute dropdown (Eric Le Lay)

    Version 3.0.4 Requires jEdit 5.2, Java 1.7, XercesPlugin 2.9.1, ErrorList 2.3, SideKick 1.8, BeautyPlugin 0.9, CommonControls 1.7.4, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.5.1
        Fix some objects not correctly unloaded when unloading the plugin (Matthieu Casanova)

    Version 3.0.3 Requires jEdit 5.2, Java 1.7, XercesPlugin 2.9.1, ErrorList 2.3, SideKick 1.8, BeautyPlugin 0.9, CommonControls 1.7.4, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.5.1
        Work-around HTML5 empty DOCTYPE (PB #1830 - Eric Le Lay)
        Pluggable RelaxNG datatypes
        XHTML5 schemas compatibility
        limited attribute value completion

    Version 3.0.2 Requires jEdit 5.2, Java 1.7, XercesPlugin 2.9.1, ErrorList 2.3, SideKick 1.8, BeautyPlugin 0.9, CommonControls 1.7.4, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.5.1
        Fix PB #1831 XML plugin not catering for backslash

    Version 3.0.1 Requires jEdit 5.2, Java 1.7, XercesPlugin 2.9.1, ErrorList 2.3, SideKick 1.8, BeautyPlugin 0.9, CommonControls 1.7.4, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.5.1
        fix PB #1825 XML - schema error is silently ignored
        Move cached files under getPluginHome()

    Version 3.0 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.4
        Added new sidekick for json files. (Dale Anson)